changing file to index

--- a/index.html
+++ b/index.html
@@ -1,12 +1,80 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8">
+    <title>Portfolio | Swain</title>
+    <link href="portfoliowebsitestyle.css" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="flowericon.png">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,400&display=swap"
+        rel="stylesheet">
 </head>
+
+
 <body>
-    hello world
+
+    <h1>
+        PORTFOLIO <br>
+        OVERVIEW
+    </h1>
+    <h2>
+        Caroline Swain
+    </h2>
+    <h3>
+        Scroll down to see works ↓</h3>
+
+    <div class="line"></div>
+
+    <nav id="icons">
+        <div id="brush_icon">
+            <a href="portfoliowebsitepersonal.html">&#128396;</a>
+        </div>
+        <div id="house_icon">
+            <a href="index.html">&#8962;</a>
+        </div>
+        <div id="star_icon">
+            <a href="portfoliowebaboutme.html">&#10023;</a>
+        </div>
+        <div id="decoration"></div>
+    </nav>
+
+
+    <div class="startopone"> &#10037;</div>
+    <div class="startoptwo"> &#10037;</div>
+    <div class="startopthree"> &#10037;</div>
+    <div class="starmidone"> &#10037;</div>
+    <div class="starmidtwo"> &#10037;</div>
+    <div class="starmidthree"> &#10037;</div>
+    <div class="starbotone"> &#10037;</div>
+    <div class="starbottwo"> &#10037;</div>
+    <div class="starbotthree"> &#10037;</div>
+    <div class="starbotfour"> &#10037;</div>
+    <div class="starbotfive"> &#10037;</div>
+
+    <nav id="works">
+        <div class="emotion">
+            <a href="https://youtu.be/1RrTnm25Jek">E-motion</a>
+        </div>
+        <img id="emotionsc" src="emotionsc.png" alt="emotionsc" a href="https://youtu.be/1RrTnm25Jek">
+
+        <div class="title_sequence">
+            <a href="https://youtu.be/5bkBVqWon4M">Title Sequence</a>
+        </div>
+        <img id="playtimesc" src="playtimesc.png" alt="playtimesc">
+
+        <div class="kinetic_typography">
+            <a href="https://youtu.be/QfVL-F9v-w0">Kinetic Typography</a>
+        </div>
+        <img id="bcssc" src="bcssc.png" alt="bcssc">
+
+        <div class="recipe">
+            <a href="smoothierecipe.html">Recipe Page</a>
+        </div>
+        <img id="smoothiemilkshakesc" src="smoothiemilkshakesc.png" alt="smoothiemilkshakesc">
+    </nav>
+
 </body>
+
 </html>
